--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,18 @@
+:root {
+  --primary-color: #171925;
+  --pink-color: #e6007e;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family: 'Source Sans Pro';
+  color: white;
+}
+
+button {
+  cursor: pointer;
 }
 
 a {
